<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#3d3c3c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ria.hangman.Category">

    <EditText
        android:id="@+id/editText"
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:fontFamily="monospace"
        android:text="@string/category"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/randomButton"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:onClick="randomClicked"
        android:text="@string/Random"
        android:textColor="#FFFFFFFF"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/animalsButton"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:onClick="animalClicked"
        android:text="@string/Animals"
        android:textColor="#FFFFFFFF"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomButton" />

    <Button
        android:id="@+id/countriesButton"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:onClick="countriesClicked"
        android:text="@string/Countries"
        android:textColor="#FFFFFFFF"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalsButton" />

    <Button
        android:id="@+id/vehiclesButton"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:onClick="vehiclesClicked"
        android:text="@string/Vehicles"
        android:textColor="#FFFFFFFF"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countriesButton" />

    <Button
        android:id="@+id/enzoButton"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:onClick="enzoClicked"
        android:text="@string/Encyklopedia"
        android:textColor="#FFFFFFFF"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehiclesButton" />

    <Button
        android:id="@+id/foodButton"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:onClick="foodClicked"
        android:text="@string/food"
        android:textColor="#FFFFFFFF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enzoButton" />

</android.support.constraint.ConstraintLayout>
