<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#000"
tools:context="com.example.ria.hangman.Start">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:layout_width="463dp"
        android:layout_height="378dp"
        android:layout_centerInParent="true"
        android:src="@drawable/background"
        android:contentDescription="Background"
        tools:ignore="HardcodedText"
        android:layout_marginTop="-8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintHorizontal_bias="0.495" />

    <Button
        android:id="@+id/button"
        android:layout_width="298dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="34dp"
        android:background="@color/colorPrimary"
        android:onClick="playClicked"
        android:text="@string/Play"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.321" />

    <ImageButton
        android:id="@+id/scoreButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginBottom="31dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/Score"
        android:onClick="scoreClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.727"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <ImageButton
        android:id="@+id/aboutButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/About"
        android:onClick="aboutClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/scoreButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scoreButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_help" />


</android.support.constraint.ConstraintLayout>